@@ -1,4 +1,5 @@
 
+	* Removed 'connecting_to_tracker' torrent state
 	* Fix bug where FAST pieces were cancelled on choke
 	* Fixed problems with restoring piece states when hash failed.
 	* Minimum peer reconnect time fix. Peers with no failures would
